--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -175,34 +175,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EFd-5T-heW">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="EFd-5T-heW">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="filters.item" id="FSC-9o-GxK" customClass="FilterTableViewCell" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FSC-9o-GxK" id="8Wl-UR-P0w">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-0G-D4e">
-                                                    <rect key="frame" x="532" y="6" width="51" height="31"/>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-0G-D4e">
+                                                    <rect key="frame" x="268" y="6" width="315" height="31"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="7Sg-ch-R4m"/>
+                                                    </constraints>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="7Sg-ch-R4m"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <connections>
+                                                        <action selector="switchValueChanged:" destination="FSC-9o-GxK" eventType="valueChanged" id="tFh-Bz-LtU"/>
+                                                    </connections>
                                                 </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0Z-J4-x5i">
-                                                    <rect key="frame" x="8" y="11" width="427" height="21"/>
+                                                    <rect key="frame" x="8" y="11" width="250" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="250" id="M1E-PF-yuU"/>
+                                                        <constraint firstAttribute="width" constant="50" id="qPg-oV-3if"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="qPg-oV-3if"/>
+                                                        </mask>
+                                                    </variation>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gtr-0G-D4e" secondAttribute="trailing" constant="11" id="C0A-Ph-xpQ"/>
+                                                <constraint firstItem="gtr-0G-D4e" firstAttribute="leading" secondItem="v0Z-J4-x5i" secondAttribute="trailing" constant="10" id="Q1l-ct-vOK"/>
                                                 <constraint firstItem="gtr-0G-D4e" firstAttribute="centerY" secondItem="8Wl-UR-P0w" secondAttribute="centerY" id="cyQ-CK-M1I"/>
-                                                <constraint firstItem="gtr-0G-D4e" firstAttribute="leading" secondItem="v0Z-J4-x5i" secondAttribute="trailing" constant="97" id="fs2-mu-ROx"/>
+                                                <constraint firstItem="gtr-0G-D4e" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="v0Z-J4-x5i" secondAttribute="trailing" constant="10" id="fs2-mu-ROx"/>
                                                 <constraint firstItem="v0Z-J4-x5i" firstAttribute="centerY" secondItem="8Wl-UR-P0w" secondAttribute="centerY" id="tR8-Dp-Rwj"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="v0Z-J4-x5i" secondAttribute="leading" id="uIn-5K-YRc"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="fs2-mu-ROx"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cellLabel" destination="v0Z-J4-x5i" id="sL1-6K-ylU"/>
@@ -210,7 +236,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="filters.header" id="C6M-di-xGg" customClass="FilterTableViewHeader" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="157.5" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="C6M-di-xGg" id="3Du-iE-RWN">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -239,6 +265,9 @@
                                 <rect key="frame" x="20" y="7" width="133" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="onCancelButton:" destination="Vte-OQ-6ha" eventType="touchUpInside" id="ep0-gi-Ibq"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" id="7Ze-k2-nMM">
@@ -254,6 +283,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="onSearchButton:" destination="Vte-OQ-6ha" eventType="touchUpInside" id="Zdb-FW-ozb"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
