--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -175,8 +175,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="EFd-5T-heW">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="EFd-5T-heW">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="filters.item" id="FSC-9o-GxK" customClass="FilterTableViewCell" customModule="Yelp" customModuleProvider="target">
@@ -186,8 +186,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-0G-D4e">
-                                                    <rect key="frame" x="268" y="6" width="315" height="31"/>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-0G-D4e">
+                                                    <rect key="frame" x="532" y="6" width="51" height="31"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="7Sg-ch-R4m"/>
                                                     </constraints>
@@ -201,9 +201,9 @@
                                                     </connections>
                                                 </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0Z-J4-x5i">
-                                                    <rect key="frame" x="8" y="11" width="250" height="20.5"/>
+                                                    <rect key="frame" x="8" y="11" width="514" height="20.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="250" id="M1E-PF-yuU"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="M1E-PF-yuU"/>
                                                         <constraint firstAttribute="width" constant="50" id="qPg-oV-3if"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -235,29 +235,24 @@
                                             <outlet property="cellSwitch" destination="gtr-0G-D4e" id="8eY-QU-F3k"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="filters.header" id="C6M-di-xGg" customClass="FilterTableViewHeader" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="157.5" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="C6M-di-xGg" id="3Du-iE-RWN">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HEADER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49L-Ck-gf7">
-                                                    <rect key="frame" x="8" y="11" width="239" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="headerLabel" destination="49L-Ck-gf7" id="MdO-Lf-U0V"/>
-                                        </connections>
-                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="EFd-5T-heW" secondAttribute="trailing" constant="-20" id="GOE-NY-SNp"/>
+                            <constraint firstItem="EFd-5T-heW" firstAttribute="leading" secondItem="ce5-d1-6Je" secondAttribute="leadingMargin" constant="-20" id="LVw-lv-opz"/>
+                            <constraint firstItem="EFd-5T-heW" firstAttribute="height" secondItem="ce5-d1-6Je" secondAttribute="height" id="NBe-VE-4id"/>
+                            <constraint firstItem="EFd-5T-heW" firstAttribute="top" secondItem="IKk-5A-GW0" secondAttribute="bottom" constant="-64" id="cXt-IC-12L"/>
+                            <constraint firstItem="FL3-Ir-Ia8" firstAttribute="top" secondItem="EFd-5T-heW" secondAttribute="bottom" id="cbb-cY-LUG"/>
+                            <constraint firstItem="EFd-5T-heW" firstAttribute="top" secondItem="IKk-5A-GW0" secondAttribute="bottom" id="juW-5l-g2I"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="juW-5l-g2I"/>
+                                <exclude reference="cbb-cY-LUG"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Filters" id="ohN-lp-njt">
                         <barButtonItem key="leftBarButtonItem" id="FaX-7M-tcq">
